styles.css
* {
    box-sizing: border-box;
}

/* Style the body */
body {
    font-family: 'Calibri', Arial, Helvetica, sans-serif;
    margin: 0;
    font-size: 16px;
    width: 100%;
    min-width: 350px;
    background-color: rgb(148, 178, 191);
}

/*Main Wrapper Position*/
.main-wrapper {
    width: 60%;
    margin: auto;
    background-color: white;
}

/* Header and logo */
.header {
    padding: 20px;
    text-align: center;
    color: rgb(238, 213, 174);
    background-color: #383838;
    font-style: oblique;
    background-image: url(images/headerjpg.jpg);
    
    
}

/*Logo size*/
.header img {
    max-width: 14em;
    float: left;  
}

/* Increase the font size of the heading */
.header h1 {
    font-size: 40px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: rgb(238, 213, 174);
    text-shadow:none;
}

.header span {
    font-size: 14px;
    ;
}

/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
.navbar {
    overflow: hidden;
    background-color: #333;
    position: sticky;
    top: 0;
    z-index: 999;
}

/* Style the navigation bar links */
.navbar a {
    float: left;
    display: block;
    color: rgb(238, 213, 174);
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
    font-size: 1.2em;
}


/* Right-aligned nav link */
.navbar a.right {
    float: right;
}

/* Style the search box inside the navigation bar */
.navbar input {
    float: right;
    padding: 6px;
    border: none;
    margin-top: 8px;
    margin-right: 16px;
    font-size: 14px;
}

/* Change nav link color on hover */
.navbar a:hover {
    background-color: #ddd;
    color: black;
}

/* Active/current nav link */
.navbar a.active {
    background-color: #65573E;
    color: white;
}

/* Main row and column*/
.row {

    display: flex;

    flex-wrap: wrap;
}

/* Create two unequal columns that sits next to each other */
/* Sidebar/left column */
.side {
    flex: 0%;
    background-color: #f1f1f1;
    padding: 5px;
}

/*Side Menu*/
.sidebar {
    padding: 0;
    background-color: #f1f1f1;
    overflow: auto;
}

.sidebar a {
    display: block;
    color: black;
    padding: 1em;
    text-decoration: none;
    background-color: #ccc;
    margin: 1em;
    border-radius: 5px;
    text-align: center;
    min-width: 95px;
}

.sidebar a:hover {
    background-color: rgb(221,171,94);
    color: black;
}

.sidebar a.active {
    background-color: #666;
    color: white;
}

/* About Sidebar/left column */
.about-side {
    flex: 10%;
    background-color: #f1f1f1;
    padding: 5px;
}

/*Side Menu*/
.about-sidebar {
    padding: 10px;
    background-color: #f1f1f1;
    overflow: auto;
}

.about-sidebar a {
    display: block;
    color: black;
    padding: 1em;
    text-decoration: none;
    background-color: #ccc;
    margin: 1em;
    border-radius: 5px;
    text-align: center;
    min-width: 123px;
}

.about-sidebar a:hover {
    background-color: rgb(221,171,94);
    color: black;
}

.about-sidebar a.active {
    background-color: #666;
    color: white;
}

.about-links {
    position: fixed;
    margin-top: 5em;
}

/* About Main Container*/
.about-main {
    flex: 70%;
    background-color: white;
    padding: 20px;

}


/* Main Container*/
.main {
    flex: 100%;
    background-color: white;
    padding: 20px;

}

/*Banner*/
.banner {
    height: 35em;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/duotone_photomontage_b.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.banner-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 1.4em;
    width: 17em;
}


/*banner button*/
.btn {
    border-radius: 4px;
    background-color: rgb(221,171,94);
    border: none;
    color: black;
    text-align: center;
    font-size: 0.8em;
    padding: 15px;
    width: 10em;
    transition: all 0.5s;
    cursor: pointer;
    margin: 5px;
}

#index-btn{
    background-color: rgb(238, 213, 174);;
}


.btn span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
}

.btn span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
}

.btn:hover span {
    padding-right: 20px;
}

.btn:hover span:after {
    opacity: 1;
    right: 0;
}

/*Trending Caption*/
.trending {
    text-align: center;
    margin-top: 5rem;
    font-size: 1.5em;
}


/*Trending Product Image*/
.x {
    display: flex;
}

/* Create three equal columns that sits next to each other */
.y {
    flex: 33.33%;
    padding: 5px;
    transition: transform 0.2s ease-in-out;
}

.y img {
    max-width: 15em;
    aspect-ratio: 4 / 3;
    width: 100%;
}

.y a {
    text-decoration: none;
    color: black;
}

.y :hover {
    transform: scale(1.1);
}

.y p {
    width: 33%;
    margin: 1em auto;
}

/*bumper*/
.bumper {
    height: 3em;
}

/* Footer */
.footer {
    padding: 10px;
    text-align: center;
    background-color: #A9A7A7;
    width: 100%;
    z-index: 998;
}

.footnote {
    margin-top: 50em;
}

.footer input,
.footer button {
    padding: 6px;
    border: none;
    margin-top: 8px;
    margin-right: 16px;
    font-size: 14px;
}

.footer button {
    background-color: #555;
    color: white;
    cursor: pointer;
}

.footer button:hover {
    background-color: black;
}

/* Create three equal columns that floats next to each other */
.footer-column {
    float: left;
    width: 33.33%;
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.footer-column a {
    text-decoration: none;
    color: black;
    padding: 0.2em;
}

.footer-column a:hover {
    text-decoration: underline;
    color: black;
}

/* Clear floats after the columns */
.footer-row:after {
    content: "";
    display: table;
    clear: both;
}


/*contact page css*/
/* Style inputs */
#contact-title {
    text-align: center;
}

.contact-container input[type="text"],
.contact-container input[type="tel"],
.contact-container input[type="email"],
.contact-container textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
}

.contact-container input[type="text"]:invalid,
.contact-container input[type="tel"]:invalid,
.contact-container input[type="email"]:invalid,
.contact-container textarea:invalid {
    border-color: red;
}

.contact-container input[type="submit"],
.contact-container input[type="reset"] {
    background-color: rgb(7, 122, 153);
    color: black;
    padding: 12px 20px;
    border: none;
    cursor: pointer;
    width: 6em;
}

.contact-container input[type="reset"] {
    background-color: rgb(208, 139, 32);
}

.contact-container input[type="submit"]:hover {
    background-color: rgb(7, 122, 153);
}

.contact-container span {
    color: red;
    font-size: 0.9em;
    font-style: italic;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

/* Style the container/contact section */
.contact-container {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 2em;
}

/* Create two columns that float next to each other */
.contact-column {
    float: left;
    width: 50%;
    padding: 2em;
}

/* Clear floats after the columns */
.contact-row:after {
    content: "";
    display: table;
    clear: both;
}

.contact-column img {
    width: 100%;
    margin: auto;
}

#subject {
    height: 20em;
}


/*About page css*/
#about-banner {
    height: 18em;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;

}

.about-us {
    margin: auto;
    margin-bottom: 2em;
    width: 80%;
}

h2.about-us {
    text-align: left;
    margin: 1em;
}

.about-text {
    padding-left: 4em;
    padding-right: 4em;
    text-align: justify;
}

/*----------------------------------*/

/* Responsive layout*/

/*Adjust side gaps*/
@media screen and (max-width: 1920px) {
    .main-wrapper {
        width: 80%;
    }
}

@media screen and (max-width: 1600px) {
    .main-wrapper {
        width: 90%;
    }
}

@media screen and (max-width: 700px) {
    .main-wrapper {
        width: 100%;
    }
}


/*Responsive footer*/
/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .footer-column {
        width: 100%;
    }
}

/* Clear floats after the columns */
.footer-row:after {
    content: "";
    display: table;
    clear: both;
}


/*Responsive nav bar*/
/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@media screen and (max-width: 400px) {
    .navbar a {
        float: none;
        width: 100%;
        flex-direction: row;
    }
}

/* When the screen is less than 660px wide, stack the links and the search field vertically instead of horizontally */
@media screen and (max-width: 660px) {
    .navbar input {
        float: none;
        display: block;
        text-align: left;
        width: 100%;
        margin: 0;
        padding: 14px;
    }

    .navbar input[type=text] {
        border: 1px solid #ccc;
    }
}

/*Responsive side bar*/
/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 700px) {

    .row,
    .x {
        flex-direction: column;
    }
}

@media screen and (max-width: 1056px) {
    .about-sidebar {
        width: 100%;
        height: 100%;
        position: relative;
    }

    .about-sidebar a {
        float: left;
    }

    div.content {
        margin-left: 0;
    }

    .about-links {
        position: static;
    }
}

@media screen and (max-width: 450px) {
    .about-sidebar a {
        text-align: center;
        float: none;
    }
    .header img {
        float: initial;
          
    }
}

/*contact page mobile layout*/
@media screen and (max-width: 700px) {
    .contact-column {
        width: 100%;
    }
}

